small changes, added conkyrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
-set -g prefix Tab
+set -g prefix Shift
 unbind C-b
-bind Tab send-prefix
+bind Shift send-prefix
 
 set -g status-keys emacs
 setw -g mode-keys emacs
