--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
-set -g prefix Tab
+set -g prefix C-a
 unbind C-b
-bind Tab send-prefix
+unbind C-x
+bind C-a send-prefix
 
 set -g status-keys emacs
 setw -g mode-keys emacs
@@ -21,9 +22,6 @@ set -g mouse-select-window on
 set -g mouse-resize-pane on
 set-option -g visual-activity on
 set-option -g visual-bell on
-
-# Follow links with "u"
-bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n "urlscan" '$SHELL -c "echo -e \"\\n\" | cat - /tmp/tmux-buffer | urlscan -b"'
 
 # Copy buffer to clipboard
 bind y run-shell "xclip -sel prim -i < /tmp/tmux-buffer > /dev/null" \; display-message "Copied contents to buffer"
