--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,17 @@ set-option -g lock-command vlock
 bind-key C-l lock-server
 setw -g utf8 on
 set -g status-utf8 on
-bind-key C-b send-prefix
+
+unbind C-b
+set -g prefix C-a
+bind-key C-a send-prefix
+
+unbind v
+bind h split-window -h
+bind v split-window -v
+bind q kill-window
+bind k kill-pane
+
 set -g status-right "#H #(date \"+[%m%d:%H%M]\") #( acpi | cut -d \" \" -f 4,5 )"
 set -g default-terminal "screen-256color"
 set -g mode-keys emacs
@@ -18,34 +28,9 @@ set -g mouse-resize-pane on
 set-option -g visual-activity on
 set-option -g visual-bell on
 
-# Copy buffer to clipboard
-bind y run-shell "xclip -sel prim -i < /tmp/tmux-buffer > /dev/null" \; display-message "Copied contents to buffer"
-bind Y run-shell "xclip -sel clip -i < /tmp/tmux-buffer > /dev/null" \; display-message "Copied contents to clipboard"
-bind S choose-buffer "run-shell \"truncate --size 0 /tmp/tmux-buffer\"\; save-buffer -b %% /tmp/tmux-buffer"
-bind F run-shell "xdg-open $(cat /tmp/tmux-buffer) > /dev/null" \; display-message "Followed link"
-bind P choose-buffer "paste-buffer -b %%"
-bind R choose-buffer "delete-buffer -b %%"
-bind v choose-buffer "show-buffer -b %%"
-
 # clock
 set-window-option -g clock-mode-colour colour221
 
 # Formats
 set -g window-status-current-format "#{window_index}:#{window_name}[#{pane_pid}]"
 
-# colours
-set -g message-style bg=colour"$COLR_16_INACTIVE3",fg=colour"$COLR_16_ACTIVE1"
-set -g display-panes-colour colour"$COLR_16_ACTIVE1"
-set -g display-panes-active-colour colour"$COLR_16_ACTIVE3"
-
-set -g status-style bg=colour"$COLR_16_INACTIVE3",fg=colour"$COLR_16_ACTIVE1"
-
-set -g pane-border-style fg=colour"$COLR_16_INACTIVE1"
-set -g pane-active-border-style fg=colour"$COLR_16_ACTIVE1"
-
-set -g window-status-style bg=colour"$COLR_16_INACTIVE3",fg=colour"$COLR_16_ACTIVE3"
-set -g window-status-last-style bg=colour"$COLR_16_INACTIVE3",fg=colour"$COLR_16_ACTIVE2"
-set -g window-status-current-style bg=colour"$COLR_16_INACTIVE3",fg=colour"$COLR_16_ACTIVE1"
-
-set -g display-panes-colour colour"$COLR_16_ACTIVE1"
-set -g display-panes-active-colour colour"$COLR_16_ACTIVE3"
