Slight cleanup of these files

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,8 @@ setw -g mode-keys emacs
 
 set-option -g lock-command vlock
 bind-key C-l lock-server
-setw -g utf8 on
-set -g status-utf8 on
+#setw -g utf8 on
+#set -g status-utf8 on
 
 unbind C-b
 set -g prefix C-a
@@ -22,9 +22,9 @@ set -g mode-keys emacs
 set -g status-keys emacs
 set -g word-separators " \""
 set -g display-time 2500
-set -g mode-mouse on
-set -g mouse-select-window on
-set -g mouse-resize-pane on
+#set -g mode-mouse on
+#set -g mouse-select-window on
+#set -g mouse-resize-pane on
 set-option -g visual-activity on
 set-option -g visual-bell on
 
